# agi-transcripter

./: .env  README.md  agent.py  pyproject.toml  transcripter.py  transcription_reader.py
prompts/: copywriter.md
